<?xml version="1.0" encoding="utf-8"?>


<!-- Layout correspondant à l'interface thérapeute  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.graphogame.myapplication.TherapeuticInterface">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="programActivity"
            android:padding="20dp"
            android:text="@string/programActivity"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="newPatient"
            android:padding="20dp"
            android:text="@string/newPatient"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/title_listActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:text="@string/listActivity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:visibility="gone"
        android:padding="20dp" />


    <ListView
        android:id="@+id/list_activities"
        android:layout_width="match_parent"
        android:layout_height="837dp"
        android:divider="#00574B"
        android:dividerHeight="4dp"
        android:stackFromBottom="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="40dp"/>

    </LinearLayout>
<!--/RelativeLayout-->